# mkhss

./: README.md
avx512/: CMakeLists.txt  precompute6144.txt  precompute64.txt  precompute_test_nsquared.txt  rns_benchmark_results.txt
avx512/app/: anike_sample.cc  fuzzy_anike.cc  fuzzy_pake.cc  location_anike.cc  test.cc  wheel.cc
avx512/benchmark/: baseline_mkhss.cc  fmpz.cc  main.cc  mkhss.cc  nike.cc  params.cc  rns.cc
avx512/evaluate/: fuzzy_pake_ours.sh  geoke_all.sh  location_baseline.sh  location_ours.sh  mkhss_chart_runtime.py  mkhss_table_runtime.py  pake_all.sh  pake_memory.py  primegen.txt  rns_fpake_table_runtime.py  rns_geoke_table_runtime.py  table_memory.py
avx512/evaluate/anike/: baseline_fuzzy_pake_10_8_16_1_1_stderr.txt  baseline_fuzzy_pake_10_8_16_1_1_stdout.txt  baseline_fuzzy_pake_12_10_8_3_3_stderr.txt  baseline_fuzzy_pake_12_10_8_3_3_stdout.txt  baseline_fuzzy_pake_8_9_5_2_2_stderr.txt  baseline_fuzzy_pake_8_9_5_2_2_stdout.txt  baseline_location_32_2_stderr.txt  baseline_location_32_2_stdout.txt  baseline_location_48_3_stderr.txt  baseline_location_48_3_stdout.txt  baseline_location_64_4_stderr.txt  baseline_location_64_4_stdout.txt  ours_fuzzy_pake_10_8_16_1_1_stderr.txt  ours_fuzzy_pake_10_8_16_1_1_stdout.txt  ours_fuzzy_pake_12_10_8_3_3_stderr.txt  ours_fuzzy_pake_12_10_8_3_3_stdout.txt  ours_fuzzy_pake_12_10_8_4_4_stderr.txt  ours_fuzzy_pake_8_10_8_2_2_stderr.txt  ours_fuzzy_pake_8_9_5_2_2_stderr.txt  ours_fuzzy_pake_8_9_5_2_2_stdout.txt  ours_location_32_2_stderr.txt  ours_location_32_2_stdout.txt  ours_location_48_3_stderr.txt  ours_location_48_3_stdout.txt  (+2 more)
avx512/evaluate_rns/: all.sh  fuzzy_pake_flint.sh  fuzzy_pake_rns.sh  geoke_flint.sh  geoke_rns.sh
avx512/explore/: error_chunk.py  exponentiation.py  factor.py  modexp_benchmark.ipynb  modexp_benchmark.ipynb.old  permute_bits.ipynb
avx512/include/: anike.hh  baseline_mkhss.hh  fixed_base_exp.hh  fmpz_class.hh  fmpz_mod.hh  location_anike.hh  mkhss.hh  multi_crt.hh  nike.hh  params.hh  precompute_io.hpp  random_oracle.hh  rns_fbe.hh  rns_helper.hh  rns_modexp.hh
avx512/old-python-prototype/: common.py  djeg_length_flexible.py  mkhss-unoptimized.py  nidls-experiments.py  nim.py  prime_wheel.py
avx512/passphrase/: final_filtered_eff_large_wordlist.txt  security.py
avx512/perf_exp/: flint_stat.txt  perf.sh  rns_stat.txt
avx512/src/: baseline_mkhss.cc  fixed_base_exp.cc  fmpz_class.cc  mkhss.cc  rns_fbe.cc
avx512/tune/: benchmark.sh  flint_bench_out.json  rns_bench_out.json  rns_benchmark.sh  tune.py
flint/: CMakeLists.txt
flint/app/: fuzzy_pake.cc  location_anike.cc  sample.cc  test.cc
flint/benchmark/: fmpz.cc  primegen.cc
flint/evaluate/: chart_memory.py  fpake_table_runtime.py  fuzzy_pake_baseline.sh  geoke_table_runtime.py  mkhss.sh  result.json
flint/explore/: exponentiation.py  fbe.py  optimize_rms.py  primetest.py  qr_cyclic.ipynb  simple_straus.old
flint/include/: baseline_mkhss.hh  bignum_openssl.hh  ec.hh  fixed_base_exp.hh  fmpz_class.hh  fuzzy_anike.hh  fuzzy_pake.hh  mkhss.hh  modexp.hh  prf.hh  util.hh
flint/old-python-prototype/: README.md  damgard_jurik.py  ddlog.py  djeg.py  mkhss.py  paillier.py  prf.py  visualize_subgroup.py
flint/passphrase/: analyze.py  bad_neighbors.pkl  bad_neighbors.txt  filtered_eff_large_wordlist.txt  neighborhood_sizes_filtered.txt  neighborhood_sizes_final.txt  stats_eff_large.txt
flint/src/: fixed_base_exp.cc  mkhss.cc  util.cc
flint/tune/: bench_out.json  benchmark.sh  tune.py
(+56 files in other folders)
